[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/KenneyMiniSquare.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 5.68043
margin_right = 5.47004
margin_top = 6.52197
margin_bottom = 6.1012
draw_center = false

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 1 )
thickness = 2

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 1 )
Button/colors/font_color_hover = Color( 0.431373, 0.431373, 0.431373, 1 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 3 )
HSeparator/styles/separator = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = -5
extra_spacing_bottom = -3
font_data = ExtResource( 3 )

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 36.0
margin_top = 32.0
margin_right = 124.0
margin_bottom = 112.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "Game Over"
align = 1
valign = 1

[node name="DepthLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 88.0
margin_bottom = 28.0
text = "Depth: 1000 m"
valign = 1

[node name="DirtLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 88.0
margin_bottom = 36.0
text = "Dirt: 10000 D"
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 88.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 88.0
margin_bottom = 56.0

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 0 )

[node name="FirstLetter" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 34.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="Letter" type="Label" parent="VBoxContainer/HBoxContainer/FirstLetter"]
margin_right = 10.0
margin_bottom = 12.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="Cursor" type="HSeparator" parent="VBoxContainer/HBoxContainer/FirstLetter"]
margin_top = 12.0
margin_right = 10.0
margin_bottom = 16.0

[node name="SecondLetter" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 38.0
margin_right = 48.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="Letter" type="Label" parent="VBoxContainer/HBoxContainer/SecondLetter"]
margin_right = 10.0
margin_bottom = 12.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="Cursor" type="HSeparator" parent="VBoxContainer/HBoxContainer/SecondLetter"]
margin_top = 12.0
margin_right = 10.0
margin_bottom = 16.0

[node name="ThirdLetter" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 52.0
margin_right = 62.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="Letter" type="Label" parent="VBoxContainer/HBoxContainer/ThirdLetter"]
margin_right = 10.0
margin_bottom = 12.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="Cursor" type="HSeparator" parent="VBoxContainer/HBoxContainer/ThirdLetter"]
margin_top = 12.0
margin_right = 10.0
margin_bottom = 16.0

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 86.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 0 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 88.0
margin_bottom = 60.0

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 88.0
margin_bottom = 80.6232
text = "Main Menu"

[node name="InputBlinkTimer" type="Timer" parent="."]
wait_time = 0.55
autostart = true

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="timeout" from="InputBlinkTimer" to="." method="_on_InputBlinkTimer_timeout"]
